Stock Take & Write Off screen fixes

--- a/src/app/admin/stock-take/stock-take.component.scss
+++ b/src/app/admin/stock-take/stock-take.component.scss
@@ -1,76 +1,52 @@
 h2 {
-  text-align: center;
+  //text-align: left;
   font-weight: 400;
   font-size: 45px;
   left: 40px;
 }
+  .content {
+  margin: 0;
+  position:inherit;
+  top: 25%;
+  left: 25%;
+  }
 
-.content {
-margin: 0;
-position:inherit;
-top: 25%;
-left: 25%;
-}
+  table {
+      margin-top: 20px;
+      width: 100%;
+      background-color: white;
+  }
 
-table {
-    margin-top: 20px;
-    width: 100%;
-    background-color: white;
-}
-
-th {
-  top: 10px;
-  text-align: center;
-  font-size: medium;
-}
-td {
-  border-bottom: 1px solid #ddd;
-}
-
-#addBtn {
-    margin-top: 30px;
-    margin-left: auto;
-    display: inline-block;
-}
-button {
-    float: right;
-}
-
-.more-button {
+  th {
+    top: 10px;
     text-align: center;
-}
+    font-size: medium;
+  }
+  td {
+    border-bottom: 1px solid #ddd;
+  }
 
-.example-container {
+  #addBtn {
+      margin-top: 30px;
+      margin-left: auto;
+      display: inline-block;
+  }
+  button {
+      float: right;
+  }
 
-    margin-left: 100px;
-    margin-right: 100px;
-}
+  .more-button {
+      text-align: center;
+  }
 
-.search {
-  position: absolute;
-  right: 20px;
-  top: 75px;
-}
+  .example-container {
 
+      margin-left: 100px;
+      margin-right: 100px;
+  }
 
-.mat-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-
-.mat-col-quarter {
-  margin-top: 20px;
-  margin-left: 40px;
-  width: 500px;
-  text-align: center;
-}
-
-.control-m {
-  margin-top: 20px;
-  margin-left: 20;
-  width: 500px;
-}
+  .search {
+    position: absolute;
+    right: 20px;
+    top: 75px;
+  }
